--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@
         <item>Rehusado</item>
         <item>Nadie se hace cargo</item>
         <item>Marcadas notificador</item>
+        <item>Entregado (Sin Firma)</item>
     </string-array>
 
 </resources>
