--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="cargando_resultados">Cargando resultados</string>
     <string name="detalle_logout">Va a salir y cerrar la sesión, ¿Desea continuar?</string>
     <string name="ok">OK</string>
-    <string name="cancelar">cancelar</string>
+    <string name="cancelar">Cancelar</string>
     <string name="notificador">Notificador</string>
     <string name="delegacion">Delegación</string>
     <string name="fecha">Fecha</string>
@@ -119,7 +119,7 @@
     <string name="error_cargar_primero_reparto_sicer">Debes cargar primero el SICER de reparto</string>
     <string name="info_firma_notificador">Para facilitar el trabajo durante el trabajo de reparto, se precisa que firme por primera vez para dejar constancia de la persona que notifica.</string>
     <string name="dia_limite">Día límite</string>
-    <string name="foto_acuse">Foto Acuse</string>
+    <string name="foto_acuse">Hacer Foto</string>
 
     <string-array name="filtro_busqueda_array">
         <item>Entregado</item>
