--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
     <string name="info_firma_notificador">Para facilitar el trabajo durante el trabajo de reparto, se precisa que firme por primera vez para dejar constancia de la persona que notifica.</string>
     <string name="dia_limite">Día límite</string>
     <string name="foto_acuse">Hacer Foto</string>
+    <string name="foto_acuse_salir">SALIR</string>
     <string name="aviso_foto">Falta realizar la foto del acuse con los datos rellenados</string>
 
     <string-array name="filtro_busqueda_array">
