Mejora de los filtros, no salian los resultados de lo cargado desde el TXT de segundos intentos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,15 +18,15 @@
     <string name="total_ficheros">Total ficheros</string>
     <string name="total_remesas">Total remesas</string>
     <string name="total_notificaciones">Total notificaciones</string>
-    <string name="total_notificaciones_gestionadas">Total notif. gestionadas</string>
-    <string name="total_notificaciones_marcadas">Total notif. marcadas</string>
-    <string name="detalle_notificaciones">Detalle notificaciones</string>
+    <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
+    <string name="total_notificaciones_marcadas">Total notificaciones marcadas</string>
+    <string name="detalle_notificaciones">Resumen notificaciones</string>
     <string name="detalle_notificacion">Detalle notificación</string>
     <string name="detalle_primer_intento">Detalle primer intento</string>
     <string name="no_entregado">No entregado</string>
     <string name="entregado">Entregado</string>
     <string name="todos">Todos</string>
-    <string name="entregado_firma">Entregado con Firma</string>
+    <string name="entregado_sin_firma_01">01 Entregado sin Firma</string>
     <string name="entregado_01">01 Entregado</string>
     <string name="dir_incorrecta_02">02 Dir. incorrecta</string>
     <string name="ausente_03">03 Ausente</string>
