--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,13 @@
     <string name="notificador">Notificador</string>
     <string name="delegacion">Delegación</string>
     <string name="fecha">Fecha</string>
-    <string name="total_ficheros">Total ficheros</string>
+    <string name="total_ficheros">Total ficheros cargados</string>
     <string name="total_remesas">Total remesas</string>
-    <string name="total_notificaciones">Total notificaciones</string>
+    <string name="total_notificaciones">Total notificaciones cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
+    <string name="total_notificaciones_pendientes">Total pendientes de 2ª visita </string>
     <string name="total_notificaciones_marcadas">Total notificaciones marcadas</string>
-    <string name="detalle_notificaciones">Resumen notificaciones</string>
+    <string name="detalle_notificaciones">Resumen notificaciones gestionadas</string>
     <string name="detalle_notificacion">Detalle notificación</string>
     <string name="detalle_primer_intento">Detalle primer intento</string>
     <string name="no_entregado">No entregado</string>
