--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,27 +19,29 @@
     <string name="total_remesas">Total remesas</string>
     <string name="total_notificaciones">Total notificaciones cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
-    <string name="total_notificaciones_acabadas">Total notificaciones acabadas</string>
+    <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
+    <string name="total_resultados">Total resultados</string>
     <string name="total_fotos">Total fotos guardadas</string>
     <string name="total_notificaciones_pendientes_2_hoy">Total 2ª visita para hoy </string>
     <string name="total_notificaciones_pendientes_2_otro_dia">Total 2ª visita para otro dia </string>
     <string name="total_notificaciones_marcadas">Total notificaciones marcadas</string>
-    <string name="detalle_notificaciones">Resumen notificaciones gestionadas</string>
+    <string name="detalle_notificaciones">Resumen gestionadas</string>
     <string name="detalle_notificacion">Detalle notificación</string>
     <string name="detalle_primer_intento">Detalle primer intento</string>
     <string name="no_entregado">No entregado</string>
     <string name="entregado">Entregado</string>
+    <string name="entregadoConSinFirma">Entregado (Firmado o sin Firma)</string>
     <string name="todos">Todos</string>
     <string name="entregado_con_firma_01">01 Entregado con Firma</string>
     <string name="entregado_01">01 Entregado sin Firma</string>
     <string name="dir_incorrecta_02">02 Dir. incorrecta</string>
-    <string name="ausente_03">03 Ausente</string>
-    <string name="ausente_pendiente_03">03 Ausentes para hoy</string>
+    <string name="ausente_31">31 Ausente (1ª Visita) </string>
+    <string name="ausente_32">32 Ausente (2 ª Visita)</string>
     <string name="desconocido_04">04 Desconocido</string>
     <string name="fallecido_05">05 Fallecido</string>
     <string name="rehusado_06">06 Rehusado</string>
-    <string name="nadie_se_hace_cargo_07">07 Nadie se hace cargo</string>
-    <string name="nadie_se_hace_cargo_pendiente_07">07 Nadie se hace cargo para hoy</string>
+    <string name="nadie_se_hace_cargo_07">07 Nadie se hace cargo (1ª Visita)</string>
+    <string name="nadie_se_hace_cargo_33">33 Nadie se hace cargo (2ª Visita)</string>
     <string name="cerrar_reparto">Cerrar Reparto</string>
     <string name="hacer_foto">Hacer Foto</string>
     <string name="espere_info_reparto">Espere mientras se obtiene información del reparto</string>
