--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,12 @@
     <string name="total_notificaciones">Total notificaciones cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
-    <string name="total_resultados">Total resultados cargados</string>
+    <string name="total_resultados">Todos los resultados almacenados</string>
     <string name="total_fotos">Total fotos hechas hoy</string>
     <string name="total_notificaciones_pendientes_2_hoy">Total 2ª visita para hoy </string>
     <string name="total_notificaciones_pendientes_2_otro_dia">Total 2ª visita para otro dia </string>
     <string name="total_notificaciones_marcadas">Total notificaciones marcadas</string>
+    <string name="total_lista">Total notificaciones en LISTA</string>
     <string name="detalle_notificaciones">Resumen gestionadas</string>
     <string name="detalle_notificacion">Detalle notificación</string>
     <string name="detalle_primer_intento">Detalle primer intento</string>
