--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="iniciando_sesion">Iniciando sesión</string>
     <string name="titulo_logout">CERRAR SESION (Sin Cerrar Reparto)</string>
     <string name="nueva_notificacion">NUEVA notificación</string>
+    <string name="borrar_reparto">BORRAR Reparto</string>
     <string name="cargar_reparto">CARGAR (Reparto/Lista)</string>
     <string name="resumen_reparto">RESUMEN/CIERRE (Reparto/Lista)</string>
     <string name="cargando_notificacion">Cargando notificación</string>
@@ -93,12 +94,14 @@
     <string name="realizar_notif_en_papel">Debido a que no se ha generado ni el sello de tiempo ni el fichero XML, realice la notificación en papel</string>
     <string name="notificacion_grabada_correctamente">La notificación se ha guardado correctamente</string>
     <string name="cerrar_reparto_info">Va a CERRAR el reparto, se generará el fichero con los RESULTADOS su subida al FTP y el BORRADO de los datos del dispositivo. ¿Desea Continuar?</string>
+    <string name="borrar_reparto_info">Va a BORRAR el reparto, se eliminaran todos de los datos del dispositivo. ¿Desea Continuar?</string>
     <string name="cerrar_hacer_foto">Va a hacer la foto del acuse. ¿Desea Continuar?</string>
     <string name="error_conexion_ftp">Se ha producido un error en la conexión FTP</string>
     <string name="error_acceso_carpeta_ftp">No se ha podido acceder al FTP</string>
     <string name="error_subir_fichero_zip">Se ha producido un error al subir el fichero ZIP</string>
     <string name="error_subir_fichero_CSV">Se ha producido un error al subir el fichero CSV</string>
     <string name="error_borrado_notificaciones">Se ha producido un error al borrar las notificaciones</string>
+    <string name="error_borrado_notificaciones_PEE">Estas como PEE debes hacer el borrado manual</string>
     <string name="error_carga_fichero">Se ha producido un error durante la carga del fichero</string>
     <string name="error_fallo_borrar_ficheros_sensibles">Se ha producido un error al borrar los ficheros XML, CSV, imagenes y sellos de tiempo</string>
     <string name="generando_fichero_CSV">Generando fichero CSV</string>
@@ -109,6 +112,7 @@
     <string name="limpiando_base_datos">Limpiando base de datos</string>
     <string name="limpiando_directorio">Limpiando ficheros XML, CSV, TS</string>
     <string name="cierre_reparto_correcto">El cierre del reparto se ha realizado correctamente</string>
+    <string name="borrado_reparto_correcto">El borrado del reparto se ha realizado correctamente</string>
     <string name="error_subiendo_fichero_segundo_intento">Se ha producido un error al subir el fichero de segundos intentos</string>
     <string name="error_proceso_cierre_reparto">Se ha producido un error durante el proceso de cierre de reparto</string>
     <string name="error_apertura_ficheros_escritura">Se ha producido un fallo de escritura sobre la PDA. Reiniciela para solucionar el problema y cerrar el reparto</string>
